# FaceMagik

./: .gitignore  Pipfile  README.md  analyze_skin_tone.py  average_color.py  common.py  face.py  image_utils.py  inference.py  math_utils.py  mrnn.py  output.py  path_fitter.py  process.py  report.txt  requirements.txt  resize.py  setup.cfg  train.py  video.py
Mask_RCNN/mrcnn/: model.py  utils.py
face_magik/: analyze_skin_tone.py  face.py
ios/ARFoundation/: Podfile
ios/ARFoundation/ARFoundation/: AppDelegate.swift  ImageViewController.swift  ViewController.swift
ios/ARFoundation/ARFoundation.xcodeproj/: project.pbxproj
ios/ARFoundation/ARFoundation.xcworkspace/: contents.xcworkspacedata
ios/FaceMagik/FaceMagik/: AlertViewController.storyboard  AlertViewController.swift  AppDelegate.swift  AssessFaceController.storyboard  AssessFaceController.swift  AssessLightController.storyboard  AssessLightController.swift  BadColorTemperature.storyboard  BadColorTemperature.swift  CIImageHelper.swift  CircularProgressView.swift  EnvConditions.swift  EnvViewController.swift  FaceDetector.swift  FaceProperties.swift  ImageViewController.swift  Info.plist  InstructViewController.swift  IntroViewController.swift  LightConditionsController.storyboard  PreviewView.swift  (+27 more)
ios/FaceMagik/FaceMagik.xcodeproj/: project.pbxproj
server/: Output.txt
server/server/: settings.py  urls.py
server/skin/: urls.py  views.py
src/face_magik/: analyze_skin_tone.py  face.py  image_utils.py  skintone.py  utils.py
src/facemagik/: common.py  face.py  skintone.py  utils.py
train/: train.py
(+28 files in other folders)
