[metadata]
name = face-magik-addarsh
version = 0.0.1
author = Addarsh Chandrasekar
author_email = addarsh.cherokie@gmail.com
description = Library for Face Magik application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Addarsh/FaceMagik.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
	= src
packages=find:
python_requires = >=3.8

[options.packages.find]
where=src